Fixed bug where hero animation div overflowed on large screens

--- a/portfolio-app/src/components/Hero/index.css
+++ b/portfolio-app/src/components/Hero/index.css
@@ -17,14 +17,12 @@
     flex: 1;
     z-index: -2;
     padding-top: 80%;
+    /* height: 100vh; */
 
     background-image: url('./imgs/whiteblack.png');
     background-attachment: fixed;
     background-size: cover;
 
-    /* border-style: solid solid solid solid;
-    border-color: var(--accent_color);
-    border-width: 1em; */
     margin: 1em;
     outline-style: solid;
     outline-color: var(--accent_color_main);
@@ -60,6 +58,10 @@
 
     .hero_accent_box {
         position: absolute;
+    }
+
+    .hero_animation {
+        padding-top: 0;
     }
 }
 
